syntax = "proto3";

import "EntityType.proto";
import "Buff.proto";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "MonsterPt";

//场景实体
message Monster {
   uint64 id = 1;
   string name = 2;
   int32 senceId = 3;
   int32  typeId = 4;
   int32 state = 5;
   uint64 hp = 6;
   uint64 mp = 7;
   uint64 attack = 8;
   uint64 refreshTime = 9;
   string npcWord = 10;
   int32 attackSpeed = 11;
   uint64 entityTypeId = 12;
   int32 level = 13;
   repeated Buff buff = 14;
}
//请求
message RequestInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time = 2;        //时间戳(单位:毫秒)
    int32 id = 3;
    int32 typeId = 4;
    int32 senceId = 5;
}
//响应
message ResponseInfo {
    uint64 msg_id = 1;      //消息id
    int32 result  = 2;
    uint64 time = 3;        //时间戳
    string content = 4;
    repeated EntityType type = 5;
    repeated Monster monster = 6;
}

